[package]
name = "pitchy"
version = "0.2.0"
edition = "2024"
authors = ["paramako <paramako@gmail.com>"]
description = "Minimalistic Rust library for working with frequencies (Hz), MIDI numbers, musical notes, and pitch operations like transposition and octave shifts."
license = "MIT"
keywords = ["audio", "music", "midi", "pitch", "notes"]
categories = ["no-std"]
readme = "README.md"
repository = "https://github.com/paramako/pitchy"

[features]
default = ["std"]
std = []
libm = ["dep:libm"]

[dependencies]
libm = { version = "0.2.15", optional = true }
